# iso4217

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dependabot.yml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release-plz.yml
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs  xml.rs
macros/src/xml/: config.rs  recordset.rs
parser/: CHANGELOG.md  Cargo.toml  README.md
parser/src/: lib.rs
static/: CHANGELOG.md  Cargo.toml  README.md
static/src/: _serde.rs  lib.rs  serde.rs
