[package]
name = "iso4217-macros"
authors.workspace = true
categories = ["finance", "localization"]
description = "Parser for ISO ISO4217 XML Data"
documentation = "https://docs.rs/iso4217-macros"
edition.workspace = true
keywords = ["iso4217", "currency", "proc-macro"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std", "serde"] }
heck = "0.5"
iso4217-parser.workspace = true
proc-macro2 = "1"
quote = "1"
serde = { workspace = true, features = ["derive"] }
syn = { version = "2", features = ["full", "fold"] }
quick-xml.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
