[package]
name = "iso4217-parser"
authors.workspace = true
categories = ["data-structures", "finance", "parser-implementations"]
description = "Parser for ISO ISO4217 XML Data"
documentation = "https://docs.rs/iso4217-parser"
edition.workspace = true
keywords = ["iso4217", "currency"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std", "serde"] }
iso3166-static = { workspace = true, features = ["serde", "alloc"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
yare = "3"
quick-xml.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
