[package]
name = "iso4217-parser"
authors.workspace = true
categories = ["data-structures", "finance", "parser-implementations"]
description = "Parser for ISO 4217 XML Data"
documentation = "https://docs.rs/iso4217-parser"
edition.workspace = true
keywords = ["iso4217", "currency"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
yare = "3"
quick-xml.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
